// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render pagination 1`] = `
<div
  className="cf-1bek1ug"
  id={undefined}
  style={undefined}
>
  <ul
    aria-describedby={null}
    className="cf-y1rhga"
    role="navigation"
  >
    <li
      className="cf-mgj6am"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-mgj6am cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        <i
          className="cf-icon cf-icon--caret-left"
          role={undefined}
        />
      </a>
    </li>
    <li
      className="cf-5lu1qe"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-5lu1qe cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        1
      </a>
    </li>
    <li
      className="cf-3962c9"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-3962c9 cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        2
      </a>
    </li>
    <li
      className="cf-3962c9"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-3962c9 cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        3
      </a>
    </li>
    <li
      className="cf-3962c9"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-3962c9 cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        4
      </a>
    </li>
    <li
      className="cf-3962c9"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-3962c9 cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        5
      </a>
    </li>
    <li
      className="cf-1cbrxtj"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-1cbrxtj cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        <i
          className="cf-icon cf-icon--caret-right"
          role={undefined}
        />
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render pagination loading 1`] = `
<div
  className="cf-1bek1ug"
  id={undefined}
  style={undefined}
>
  <ul
    aria-describedby={null}
    className="cf-y1rhga"
    role="navigation"
  >
    <li
      className="cf-mgj6am"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-mgj6am cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        <i
          className="cf-icon cf-icon--caret-left"
          role={undefined}
        />
      </a>
    </li>
    <li
      className="cf-5lu1qe"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-5lu1qe cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        <i
          className="cf-icon cf-icon--loading"
          role={undefined}
        />
      </a>
    </li>
    <li
      className="cf-3962c9"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-3962c9 cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        2
      </a>
    </li>
    <li
      className="cf-3962c9"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-3962c9 cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        3
      </a>
    </li>
    <li
      className="cf-3962c9"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-3962c9 cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        4
      </a>
    </li>
    <li
      className="cf-3962c9"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-3962c9 cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        5
      </a>
    </li>
    <li
      className="cf-1cbrxtj"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-1cbrxtj cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        <i
          className="cf-icon cf-icon--caret-right"
          role={undefined}
        />
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render pagination with an infoFormatter 1`] = `
<div
  className="cf-1bek1ug"
  id={undefined}
  style={undefined}
>
  <ul
    aria-describedby={null}
    className="cf-y1rhga"
    role="navigation"
  >
    <li
      className="cf-1cbrxtj"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-1cbrxtj cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        <i
          className="cf-icon cf-icon--caret-left"
          role={undefined}
        />
      </a>
    </li>
    <li
      className="cf-3962c9"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-3962c9 cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        1
      </a>
    </li>
    <li
      className="cf-5lu1qe"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-5lu1qe cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        2
      </a>
    </li>
    <li
      className="cf-3962c9"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-3962c9 cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        3
      </a>
    </li>
    <li
      className="cf-3962c9"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-3962c9 cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        4
      </a>
    </li>
    <li
      className="cf-3962c9"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-3962c9 cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        5
      </a>
    </li>
    <li
      className="cf-1cbrxtj"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-1cbrxtj cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        <i
          className="cf-icon cf-icon--caret-right"
          role={undefined}
        />
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render pagination with the last page active 1`] = `
<div
  className="cf-1bek1ug"
  id={undefined}
  style={undefined}
>
  <ul
    aria-describedby={null}
    className="cf-y1rhga"
    role="navigation"
  >
    <li
      className="cf-1cbrxtj"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-1cbrxtj cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        <i
          className="cf-icon cf-icon--caret-left"
          role={undefined}
        />
      </a>
    </li>
    <li
      className="cf-3962c9"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-3962c9 cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        1
      </a>
    </li>
    <li
      className="cf-3962c9"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-3962c9 cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        2
      </a>
    </li>
    <li
      className="cf-3962c9"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-3962c9 cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        3
      </a>
    </li>
    <li
      className="cf-3962c9"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-3962c9 cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        4
      </a>
    </li>
    <li
      className="cf-5lu1qe"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-5lu1qe cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        5
      </a>
    </li>
    <li
      className="cf-mgj6am"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-mgj6am cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        <i
          className="cf-icon cf-icon--caret-right"
          role={undefined}
        />
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render with collapsed items 1`] = `
<div
  className="cf-1bek1ug"
  id={undefined}
  style={undefined}
>
  <ul
    aria-describedby={null}
    className="cf-y1rhga"
    role="navigation"
  >
    <li
      className="cf-1cbrxtj"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-1cbrxtj cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        <i
          className="cf-icon cf-icon--caret-left"
          role={undefined}
        />
      </a>
    </li>
    <li
      className="cf-3962c9"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-3962c9 cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        1
      </a>
    </li>
    <li
      className="cf-3962c9"
      role="presentation"
    >
      <a
        aria-label={undefined}
        className="cf-3962c9 cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        <span>
          …
        </span>
      </a>
    </li>
    <li
      className="cf-3962c9"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-3962c9 cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        4
      </a>
    </li>
    <li
      className="cf-3962c9"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-3962c9 cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        5
      </a>
    </li>
    <li
      className="cf-5lu1qe"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-5lu1qe cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        6
      </a>
    </li>
    <li
      className="cf-3962c9"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-3962c9 cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        7
      </a>
    </li>
    <li
      className="cf-3962c9"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-3962c9 cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        8
      </a>
    </li>
    <li
      className="cf-3962c9"
      role="presentation"
    >
      <a
        aria-label={undefined}
        className="cf-3962c9 cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        <span>
          …
        </span>
      </a>
    </li>
    <li
      className="cf-3962c9"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-3962c9 cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        20
      </a>
    </li>
    <li
      className="cf-1cbrxtj"
      role={null}
    >
      <a
        aria-label={undefined}
        className="cf-1cbrxtj cf-fyzuiq"
        href="#"
        id={undefined}
        onClick={[Function]}
        style={undefined}
      >
        <i
          className="cf-icon cf-icon--caret-right"
          role={undefined}
        />
      </a>
    </li>
  </ul>
</div>
`;
